[package]
name = "rust_test_game"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
game_engine = { version = "0.1.0", path = "../game_engine" }
game_event_macro = { version = "0.1.0", path = "../game_event_macro" }
reqwest = { version = "0.12.11", features = ["blocking", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
